--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.17.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.312.0",
     "nanoid": "^5.0.0",
     "react": "^18.2.0",
